# webscraping_ETL

./: .gitignore  README.md  pyproject.toml
etl_project/: Banks.db  Largest_banks_data.csv  code_log.txt
webscraping_ETL/: webscraping_ETL.py
